--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,6 @@ layout: default
 
 <div class="tags">
   {% for tag in page.tags %}
-    <a class="tags__tag" href="">{{ tag }}</span>
+    <a class="tags__tag" href="">{{ tag }}</a>
   {% endfor %}
 </div>
