--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,3 +19,21 @@ layout: default
     <a class="tags__tag" href="">{{ tag }}</a>
   {% endfor %}
 </div>
+
+<div class="disqus">
+  <div id="disqus_thread"></div>
+</div>
+<script>
+    var disqus_config = function () {
+        this.page.url = 'https://andreasonny83.github.io{{ page.url }}';
+        this.page.identifier = '{{ page.title }}';
+    };
+    (function() {
+        var d = document, s = d.createElement('script');
+        s.src = '//andreasonny83.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//andreasonny83.disqus.com/count.js" async></script>
