module pattern plus service workers

--- a/_sass/_responsive-navbar.scss
+++ b/_sass/_responsive-navbar.scss
@@ -70,7 +70,7 @@
 
 .responsive-nav__header {
   height: 200px;
-  background: #330099;
+  background: #2b3771;
   color: #FFF;
   display: flex;
   padding: 16px;
